--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Netflix Landing Page</title>
     <!-- <link rel="stylesheet" href="font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="shortcut icon" href="images/netlogo.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
